[gd_scene load_steps=24 format=2]

[ext_resource path="res://WorldTiles.gd" type="Script" id=1]
[ext_resource path="res://TextureGen.gd" type="Script" id=2]
[ext_resource path="res://Water.gd" type="Script" id=3]
[ext_resource path="res://IslandGen.gd" type="Script" id=4]
[ext_resource path="res://WorldOverlay.gd" type="Script" id=5]
[ext_resource path="res://OverlayTextureGen.gd" type="Script" id=6]
[ext_resource path="res://LocalPlayer.gd" type="Script" id=7]
[ext_resource path="res://Player.gd" type="Script" id=8]
[ext_resource path="res://VisiblePlayer.gd" type="Script" id=9]
[ext_resource path="res://PlayerGen.gd" type="Script" id=10]
[ext_resource path="res://LocalUI.gd" type="Script" id=11]
[ext_resource path="res://HpIndicator.gd" type="Script" id=12]
[ext_resource path="res://assets/harm.wav" type="AudioStream" id=13]
[ext_resource path="res://WoodIndicator.gd" type="Script" id=14]
[ext_resource path="res://assets/break.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/build.wav" type="AudioStream" id=16]
[ext_resource path="res://Death.gd" type="Script" id=17]
[ext_resource path="res://assets/death.png" type="Texture" id=18]
[ext_resource path="res://assets/death.wav" type="AudioStream" id=19]
[ext_resource path="res://FPSCounter.gd" type="Script" id=20]
[ext_resource path="res://assets/title1.ogg" type="AudioStream" id=21]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode skip_vertex_transform;

void vertex() {
	float pres = TIME+VERTEX.x+((VERTEX.y+50f)/400f);
	float yoff = (sin(pres)*70f);
	float xoff = (cos(pres)*40f);
	VERTEX = (WORLD_MATRIX * vec4(VERTEX.x + xoff, VERTEX.y + yoff, 0.0, 1.0)).xy;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[node name="Node2D" type="Node2D"]
scale = Vector2( 6, 6 )

[node name="WorldTerrain" type="TileMap" parent="."]
cell_size = Vector2( 1, 1 )
cell_quadrant_size = 8
format = 1
script = ExtResource( 1 )

[node name="TextureGen" type="Node" parent="WorldTerrain"]
script = ExtResource( 2 )

[node name="Water" type="Node" parent="WorldTerrain/TextureGen"]
script = ExtResource( 3 )

[node name="IslandGen" type="Node" parent="WorldTerrain"]
script = ExtResource( 4 )

[node name="WorldOverlay" type="TileMap" parent="WorldTerrain"]
cell_quadrant_size = 4
format = 1
script = ExtResource( 5 )

[node name="OverlayTextureGen" type="Node" parent="WorldTerrain/WorldOverlay"]
script = ExtResource( 6 )

[node name="LocalPlayer" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Mover" type="Node2D" parent="LocalPlayer"]
script = ExtResource( 8 )

[node name="VisiblePlayer" type="Sprite" parent="LocalPlayer"]
centered = false
offset = Vector2( -1, -5 )
script = ExtResource( 9 )

[node name="Camera2D" type="Camera2D" parent="LocalPlayer/VisiblePlayer"]
smoothing_enabled = true
smoothing_speed = 3.0
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="PlayerGen" type="Node" parent="LocalPlayer/VisiblePlayer"]
script = ExtResource( 10 )

[node name="walk" type="AudioStreamPlayer" parent="LocalPlayer/VisiblePlayer"]
volume_db = -20.0

[node name="LocalUI" type="CanvasLayer" parent="LocalPlayer"]
script = ExtResource( 11 )

[node name="HpIndicator" type="Control" parent="LocalPlayer/LocalUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -42.0
margin_right = 128.0
script = ExtResource( 12 )

[node name="Harm" type="AudioStreamPlayer" parent="LocalPlayer/LocalUI/HpIndicator"]
stream = ExtResource( 13 )

[node name="WoodIndicator" type="Control" parent="LocalPlayer/LocalUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
script = ExtResource( 14 )

[node name="Break" type="AudioStreamPlayer" parent="LocalPlayer/LocalUI/WoodIndicator"]
stream = ExtResource( 15 )

[node name="Build" type="AudioStreamPlayer" parent="LocalPlayer/LocalUI/WoodIndicator"]
stream = ExtResource( 16 )

[node name="Death" type="Control" parent="LocalPlayer/LocalUI"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 17 )

[node name="TextureRect" type="TextureRect" parent="LocalPlayer/LocalUI/Death"]
visible = false
material = SubResource( 2 )
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
texture = ExtResource( 18 )
stretch_mode = 6

[node name="DeathAudio" type="AudioStreamPlayer" parent="LocalPlayer/LocalUI/Death"]
stream = ExtResource( 19 )

[node name="FPSCounter" type="Label" parent="LocalPlayer/LocalUI"]
margin_right = 40.0
margin_bottom = 14.0
text = "FPS: 0"
script = ExtResource( 20 )

[node name="bg" type="AudioStreamPlayer" parent="LocalPlayer/LocalUI"]
stream = ExtResource( 21 )
